# music-assist

./: .firebaserc  firebase.json  hymn_player.py  main.py
backend/: .env  .env.example  .gitignore  Dockerfile  README.md  crawler.py  hymn_player.py  main.py  populate_db.py  pyproject.toml  rag_pipeline.py  terminal_chat.py
backend/data/crawled/: crawl_summary.json  doc_0000.json  doc_0001.json  doc_0002.json  doc_0003.json  doc_0004.json  doc_0005.json  doc_0006.json  doc_0007.json  doc_0008.json  doc_0009.json  doc_0010.json  doc_0011.json  doc_0012.json  doc_0013.json  doc_0014.json  doc_0015.json  doc_0016.json  doc_0017.json  doc_0018.json  doc_0019.json  doc_0020.json  doc_0021.json  doc_0022.json  doc_0023.json  doc_0024.json  doc_0025.json  doc_0026.json  doc_0027.json  doc_0028.json  doc_0029.json  doc_0030.json  doc_0031.json  doc_0032.json  doc_0033.json  doc_0034.json  doc_0035.json  doc_0036.json  doc_0037.json  doc_0038.json  (+42 more)
data/crawled/: crawl_summary.json  doc_0000.json  doc_0001.json  doc_0002.json  doc_0003.json  doc_0004.json  doc_0005.json  doc_0006.json  doc_0007.json  doc_0008.json  doc_0009.json  doc_0010.json  doc_0011.json  doc_0012.json  doc_0013.json  doc_0014.json  doc_0015.json  doc_0016.json  doc_0017.json  doc_0018.json  doc_0019.json  doc_0020.json  doc_0021.json  doc_0022.json  doc_0023.json  doc_0024.json  doc_0025.json  doc_0026.json  doc_0027.json  doc_0028.json  doc_0029.json  doc_0030.json  doc_0031.json  (+48 more)
frontend/: App.tsx  README.md  constants.ts  index.html  index.tsx  metadata.json  package-lock.json  package.json  types.ts
(+46 files in other folders)
